--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020103
+ - (djm) Use bigcrypt() on systems with SCO_PROTECTED_PW. Patch from 
+   Roger Cornelius <rac@tenzing.org>
+
 20011229
  - (djm) Apply Cygwin pointer deref fix from Corinna Vinschen 
    <vinschen@redhat.com> Could be abused to guess valid usernames
