- (bal) NCR requies use_pipes to operate correctly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020105
+ - (bal) NCR requies use_pipes to operate correctly.
+
 20020103
  - (djm) Use bigcrypt() on systems with SCO_PROTECTED_PW. Patch from 
    Roger Cornelius <rac@tenzing.org>
