- (stevesk) defines.h: use "/var/spool/sockets/X11/%u" for HP-UX.  does    not depend on transition links.  from Lutz Jaenicke.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (djm) Merge Cygwin copy_environment with do_pam_environment, removing 
    fixed env var size limit in the process. Report from Corinna Vinschen 
    <vinschen@redhat.com>
+ - (stevesk) defines.h: use "/var/spool/sockets/X11/%u" for HP-UX.  does
+   not depend on transition links.  from Lutz Jaenicke.
 
 20020106
  - (stevesk) defines.h: determine _PATH_UNIX_X; currently "/tmp/.X11-unix/X%u"
