--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
      the ssh-rand-helper program. You can force the use of ssh-rand-helper
      using the --with-rand-helper configure argument
    - Simplify and clean up ssh-rand-helper configuration
+ - (djm) Fix some bugs I introduced into ssh-rand-helper yesterday
 
 20020121
  - (djm) Rework ssh-rand-helper:
