- (djm) autoconf hacking:    - Add OpenSSL sanity check: verify that header version matches version      reported by library

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
      the ssh-rand-helper program. You can force the use of ssh-rand-helper
      using the --with-rand-helper configure argument
    - Simplify and clean up ssh-rand-helper configuration
+   - Add OpenSSL sanity check: verify that header version matches version
+     reported by library
  - (djm) Fix some bugs I introduced into ssh-rand-helper yesterday
 
 20020121
