--- a/ChangeLog
+++ b/ChangeLog
@@ -226,6 +226,8 @@
    - stevesk@cvs.openbsd.org 2002/01/22 02:52:41
      [servconf.c]
      typo in error message; from djast@cs.toronto.edu
+ - (djm) Make auth2-pam.c compile again after dispatch.h and packet.h 
+   changes
 
 20020121
  - (djm) Rework ssh-rand-helper:
