--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (djm) Fix non-standard shell syntax in autoconf. Patch from 
    Dave Dykstra <dwd@bell-labs.com>
  - (stevesk) fix --with-zlib=
+ - (djm) Use case statements in autoconf to clean up some tests
 
 20020122
  - (djm) autoconf hacking:
