--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
    Dave Dykstra <dwd@bell-labs.com>
  - (stevesk) fix --with-zlib=
  - (djm) Use case statements in autoconf to clean up some tests
+ - (bal) reverted out of 5/2001 change to atexit().  I assume I
+   did it to handle SonyOS.  If that is the case than we will
+   do a special case for them.
 
 20020122
  - (djm) autoconf hacking:
