--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020124
+ - (stevesk) Makefile.in: bug #61; delete commented line for now.
+
 20020123
  - (djm) Fix non-standard shell syntax in autoconf. Patch from 
    Dave Dykstra <dwd@bell-labs.com>
