--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 20020125
- - (djm) Don't grab Xserver by default. x11-ssh-askpass doesn't and grabbing
-   can cause deadlocks with kinput2
+ - (djm) Don't grab Xserver or pointer by default. x11-ssh-askpass doesn't 
+   and grabbing can cause deadlocks with kinput2. 
 
 20020124
  - (stevesk) Makefile.in: bug #61; delete commented line for now.
