--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020130
+ - (djm) Delay PRNG seeding until we need it in ssh-keygen, from markus@
+
 20020125
  - (djm) Don't grab Xserver or pointer by default. x11-ssh-askpass doesn't 
    and grabbing can cause deadlocks with kinput2. 
