--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,8 @@
      [sftp-int.c sftp-int.h]
      API cleanup and backwards compat for filexfer v.0 servers; ok markus@
  - (djm) Sync openbsd-compat with OpenBSD CVS too
+ - (djm) Bug #106: Add --without-rpath configure option. Patch from 
+   Nicolas.Williams@ubsw.com
 
 20020210
  - (djm) OpenBSD CVS Sync
