--- a/ChangeLog
+++ b/ChangeLog
@@ -37,6 +37,8 @@
  - (djm) Sync openbsd-compat with OpenBSD CVS too
  - (djm) Bug #106: Add --without-rpath configure option. Patch from 
    Nicolas.Williams@ubsw.com
+ - (tim) [configure.ac, defines.h ] add rpc/rpc.h for INADDR_LOOPBACK
+    on SCO OSR3
 
 20020210
  - (djm) OpenBSD CVS Sync
