- (bal) Migrate IRIX jobs/projects/audit/etc code to    openbsd-compat/port-irix.[ch] to improve readiblity of do_child()

--- a/ChangeLog
+++ b/ChangeLog
@@ -43,6 +43,8 @@
    - deraadt@cvs.openbsd.org 2002/02/19 02:50:59
      [sshd_config]
      stategy is not an english word
+ - (bal) Migrate IRIX jobs/projects/audit/etc code to 
+   openbsd-compat/port-irix.[ch] to improve readiblity of do_child()
 
 20020218
  - (tim) newer config.guess from ftp://ftp.gnu.org/gnu/config/config.guess
