--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020221
+ - (bal) Minor session.c for cygwin.  mispelt 'is_winnt' variable.
+
 20020219
  - (djm) OpenBSD CVS Sync
    - mpech@cvs.openbsd.org 2002/02/13 08:33:47
