--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
+20020224
+ - (bal) Drop Session *s usage in ports-aix.[ch] and pass just what we
+   need to do the jobs (AIX still does not fully compile, but that is
+   coming).
+
 20020221
- - (bal) Minor session.c for cygwin.  mispelt 'is_winnt' variable.
+ - (bal) Minor session.c fixup for cygwin.  mispelt 'is_winnt' variable.
 
 20020219
  - (djm) OpenBSD CVS Sync
