--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    coming).
  - (bal) Part two.. Drop unused AIX header, fix up missing char *cp.  All
    that is left is handling aix_usrinfo().
+ - (tim) [loginrec.c session.c sshlogin.c sshlogin.h] Bug 84
+   patch by wknox@mitre.org (William Knox).
+   [sshlogin.h] declare record_utmp_only for session.c
 
 20020221
  - (bal) Minor session.c fixup for cygwin.  mispelt 'is_winnt' variable.
