--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020225
+ - (bal) Last AIX patch.  Moved aix_usrinfo() outside of do_setuserconext()
+   since we need more session information than provided by that function.
+
 20020224
  - (bal) Drop Session *s usage in ports-aix.[ch] and pass just what we
    need to do the jobs (AIX still does not fully compile, but that is
