--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
    reported by peak@argo.troja.mff.cuni.cz (Pavel Kankovsky)
    [configure.ac defines.h] modify previous SCO3 fix to not break Solaris 7
    [acconfig.h] remove unused HAVE_REGCOMP
+ - (stevesk) openbsd-compat/base64.h: typo in comment
 
 20020225
  - (bal) Last AIX patch.  Moved aix_usrinfo() outside of do_setuserconext()
