correction to sig_atomic_t test

--- a/ChangeLog
+++ b/ChangeLog
@@ -54,6 +54,7 @@
      more u_* fixes
  - (bal) Imported missing fatal.c and fixed up Makefile.in
  - (tim) [configure.ac] correction to Bug 123 fix
+     [configure.ac] correction to sig_atomic_t test
 
 20020225
  - (bal) Last AIX patch.  Moved aix_usrinfo() outside of do_setuserconext()
