--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
    - markus@cvs.openbsd.org 2002/03/06 00:25:55
      [version.h]
      OpenSSH_3.1
+ - (djm) Update RPM spec files with new version number
 
 20020305
    - stevesk@cvs.openbsd.org 2002/03/02 09:34:42
