--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,9 @@
      OpenSSH_3.1
  - (djm) Update RPM spec files with new version number
  - (bal) Updated INSTALL to reflect 0.9.6 OpenSSL requirement
+ - (bal) Add in check for rpc/types.h since it is needed on
+   some platforms for INADDR_LOOPBACK.  We should retest
+   SCO 3 to see if this fixes their problem also.
 
 20020305
    - stevesk@cvs.openbsd.org 2002/03/02 09:34:42
