--- a/ChangeLog
+++ b/ChangeLog
@@ -17,7 +17,9 @@
  - (bal) Add in check for rpc/types.h since it is needed on
    some platforms for INADDR_LOOPBACK.  We should retest
    SCO 3 to see if this fixes their problem also.
-
+ - (bal) Test for IRIX JOBS support at runtime.  Patch provided
+   by David Kaelbling <drk@sgi.com>
+ 
 20020305
    - stevesk@cvs.openbsd.org 2002/03/02 09:34:42
      [LICENCE]
