--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    accidentally committed.
  - (djm) Add Markus' patch for compat wih OpenSSL < 0.9.6. 
    Known issue: Blowfish for SSH1 does not work
+ - (stevesk) entropy.c: typo in debug message
 
 20020307
  - (djm) OpenBSD CVS Sync
