--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20020317
+ - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
+   warn if directory does not exist. Put system directories in front of
+   PATH for finding entorpy commands.
+
 20020311
  - (tim) [contrib/solaris/buildpkg.sh, contrib/solaris/README] Updated to
    build on all platforms that support SVR4 style package tools. Now runs
