--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
  - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
    warn if directory does not exist. Put system directories in front of
    PATH for finding entorpy commands.
+ - (tim) [contrib/aix/buildbff.sh contrib/aix/inventory.sh] AIX package
+   build fixes.  Patch by Darren Tucker <dtucker@zip.com.au>
+   [contrib/solaris/buildpkg.sh] add missing dirs to SYSTEM_DIR. Have
+   postinstall check for $piddir and add if necessary.
 
 20020311
  - (tim) [contrib/solaris/buildpkg.sh, contrib/solaris/README] Updated to
