--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020322
+ - (stevesk) HAVE_ACCRIGHTS_IN_MSGHDR configure support
+
 20020321
  - (bal) OpenBSD CVS Sync
    - itojun@cvs.openbsd.org 2002/03/08 06:10:16
