--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20020322
  - (stevesk) HAVE_ACCRIGHTS_IN_MSGHDR configure support
+ - (stevesk) [monitor.c monitor_wrap.c] #ifdef HAVE_PW_CLASS_IN_PASSWD
 
 20020321
  - (bal) OpenBSD CVS Sync
