--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20020322
  - (stevesk) HAVE_ACCRIGHTS_IN_MSGHDR configure support
  - (stevesk) [monitor.c monitor_wrap.c] #ifdef HAVE_PW_CLASS_IN_PASSWD
+ - (stevesk) configure and cpp __FUNCTION__ gymnastics to handle nielsisms
 
 20020321
  - (bal) OpenBSD CVS Sync
