--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
  - (stevesk) configure and cpp __FUNCTION__ gymnastics to handle nielsisms
  - (stevesk) [monitor_fdpass.c] support for access rights style file
    descriptor passing
+ - (stevesk) [auth2.c] merge cleanup/sync
 
 20020321
  - (bal) OpenBSD CVS Sync
