--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20020324
+ - (stevesk) [session.c] disable LOGIN_NEEDS_TERM until we are sure
+   it can be removed. only used on solaris. will no longer compile with
+   privsep shuffling.
+
 20020322
  - (stevesk) HAVE_ACCRIGHTS_IN_MSGHDR configure support
  - (stevesk) [monitor.c monitor_wrap.c] #ifdef HAVE_PW_CLASS_IN_PASSWD
