--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020325
+ - (stevesk) import OpenBSD <sys/tree.h> as "openbsd-compat/tree.h"
+
 20020324
  - (stevesk) [session.c] disable LOGIN_NEEDS_TERM until we are sure
    it can be removed. only used on solaris. will no longer compile with
