--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020327
+ - (bal) 'pw' should be 'authctxt->pw' in auth1.c spotted by 
+   kent@lysator.liu.se
+
 20020325
  - (stevesk) import OpenBSD <sys/tree.h> as "openbsd-compat/tree.h"
  - (bal) OpenBSD CVS Sync
