--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020331
+ - (tim) [configure.ac] use /bin/test -L to work around broken builtin on
+   Solaris 8
+
 20020330
  - (stevesk) [configure.ac] remove header check for sys/ttcompat.h
    bug 167
