--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20020331
  - (tim) [configure.ac] use /bin/test -L to work around broken builtin on
    Solaris 8
+ - (tim) [sshconnect2.c] change uint32_t to u_int32_t
 
 20020330
  - (stevesk) [configure.ac] remove header check for sys/ttcompat.h
