--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020401
+ - (stevesk) [monitor.c] PAM should work again; will *not* work with
+   UsePrivilegeSeparation=yes.
+
 20020331
  - (tim) [configure.ac] use /bin/test -L to work around broken builtin on
    Solaris 8
