--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20020401
  - (stevesk) [monitor.c] PAM should work again; will *not* work with
    UsePrivilegeSeparation=yes.
+ - (stevesk) [auth1.c] fix password auth for protocol 1 when
+   !USE_PAM && !HAVE_OSF_SIA; merge issue.
 
 20020331
  - (tim) [configure.ac] use /bin/test -L to work around broken builtin on
