--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    - deraadt@cvs.openbsd.org 2002/03/30 17:45:46
      [scp.c]
      stretch banners
+ - (bal) CVS ID sync of uidswap.c
  - (bal) OpenBSD CVS Sync (now for the real sync)
    - markus@cvs.openbsd.org 2002/03/27 22:21:45
      [ssh-keygen.c]
