- (bal) mispelling in uidswap.c (portable only)

--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,7 @@
    - markus@cvs.openbsd.org 2002/04/02 20:11:38
      [ssh-rsa.c]
      ignore SSH_BUG_SIGBLOB for ssh-rsa; #187
+ - (bal) mispelling in uidswap.c (portable only)
 
 20020401
  - (stevesk) [monitor.c] PAM should work again; will *not* work with
