--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+20020405
+ - (bal) Patch for OpenSC SmartCard library; ok markus@; patch by
+   Juha Yrjölä <jyrjola@cc.hut.fi>
+ - (bal) Minor documentation update to reflect smartcard library
+   support changes.
+
 20020404
  - (stevesk) [auth-pam.c auth-pam.h auth-passwd.c auth-sia.c auth-sia.h
     auth1.c auth2.c] PAM, OSF_SIA password auth cleanup; from djm.
