--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    Juha Yrjölä <jyrjola@cc.hut.fi>
  - (bal) Minor documentation update to reflect smartcard library
    support changes.
+ - (bal) Too many <sys/queue.h> issues.  Remove all workarounds and
+   using internal version only.
 
 20020404
  - (stevesk) [auth-pam.c auth-pam.h auth-passwd.c auth-sia.c auth-sia.h
