--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020406
+ - (djm) Typo in Suse SPEC file. Fix from Carsten Grohmann 
+   <carsten.grohmann@dr-baldeweg.de>
+
 20020405
  - (bal) Patch for OpenSC SmartCard library; ok markus@; patch by
    Juha Yrjölä <jyrjola@cc.hut.fi>
