--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,8 @@
      [sftp-client.c]
      Fix occasional corruption on upload due to bad reuse of request id, spotted
      by chombier@mac.com; ok markus@
-
+ - (bal) Slight update to OpenSC support.  Better version checking. patch
+   by Juha Yrjölä <jyrjola@cc.hut.fi> 
 
 20020405
  - (bal) Patch for OpenSC SmartCard library; ok markus@; patch by
