--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
    by Juha Yrjölä <jyrjola@cc.hut.fi> 
  - (bal) Revered out of runtime IRIX detection of joblimits.  Code is
    incomplete.
+ - (bal) Quiet down configure.ac if /bin/test does not exist.
 
 20020405
  - (bal) Patch for OpenSC SmartCard library; ok markus@; patch by
