--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020407
+ - (stevesk) HAVE_CONTROL_IN_MSGHDR; not used right now.
+   Future: we may want to test if fd passing works correctly.
+
 20020406
  - (djm) Typo in Suse SPEC file. Fix from Carsten Grohmann 
    <carsten.grohmann@dr-baldeweg.de>
