--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20020407
  - (stevesk) HAVE_CONTROL_IN_MSGHDR; not used right now.
    Future: we may want to test if fd passing works correctly.
+ - (stevesk) [monitor_fdpass.c] fatal() for UsePrivilegeSeparation=yes
+   and no fd passing support.
 
 20020406
  - (djm) Typo in Suse SPEC file. Fix from Carsten Grohmann 
