--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    Future: we may want to test if fd passing works correctly.
  - (stevesk) [monitor_fdpass.c] fatal() for UsePrivilegeSeparation=yes
    and no fd passing support.
+ - (stevesk) HAVE_MMAP and HAVE_SYS_MMAN_H and use them in
+   monitor_mm.c
 
 20020406
  - (djm) Typo in Suse SPEC file. Fix from Carsten Grohmann 
