--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
    monitor_mm.c
  - (stevesk) remove configure support for poll.h; it was removed
    from sshd.c a long time ago.
+ - (stevesk) --with-privsep-user; default sshd
 
 20020406
  - (djm) Typo in Suse SPEC file. Fix from Carsten Grohmann 
