--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020408
+ - (bal) Minor OpenSC updates.  Fix up header locations and update
+   README.smartcard provided by Juha Yrjölä <jyrjola@cc.hut.fi>
+
 20020407
  - (stevesk) HAVE_CONTROL_IN_MSGHDR; not used right now.
    Future: we may want to test if fd passing works correctly.
