--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020410
+ - (stevesk) [auth-sia.c] compile fix Chris Adams <cmadams@hiwaay.net>
+
 20020408
  - (bal) Minor OpenSC updates.  Fix up header locations and update
    README.smartcard provided by Juha Yrjölä <jyrjola@cc.hut.fi>
