[acconfig.h defines.h includes.h] put includes in includes.h and defines in defines.h [rijndael.c openbsd-compat/fake-socket.h openbsd-compat/inet_aton.c] include "includes.h" instead of "config.h" ok stevesk@

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 20020411
  - (stevesk) [auth-sia.c] cleanup
+ - (tim) [acconfig.h defines.h includes.h] put includes in includes.h and
+   defines in defines.h [rijndael.c openbsd-compat/fake-socket.h
+   openbsd-compat/inet_aton.c] include "includes.h" instead of "config.h"
+   ok stevesk@
 
 20020410
  - (stevesk) [configure.ac monitor.c] HAVE_SOCKETPAIR
