--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020412
+ - (stevesk) [auth-sia.[ch]] add BSD license from Chris Adams
+
 20020411
  - (stevesk) [auth-sia.c] cleanup
  - (tim) [acconfig.h defines.h includes.h] put includes in includes.h and
