[configure.ac] add <sys/types.h> to msghdr tests. Change -L to -h on testing for /bin being symbolic link

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 20020412
  - (stevesk) [auth-sia.[ch]] add BSD license from Chris Adams
+ - (tim) [configure.ac] add <sys/types.h> to msghdr tests. Change -L
+   to -h on testing for /bin being symbolic link
 
 20020411
  - (stevesk) [auth-sia.c] cleanup
