--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20020415
  - (djm) Unbreak "make install". Fix from Darren Tucker <dtucker@zip.com.au>
+ - (stevesk) bsd-cygwin_util.[ch] BSD license from Corinna Vinschen
 
 20020414
  - (djm) ssh-rand-helper improvements
