--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20020415
  - (djm) Unbreak "make install". Fix from Darren Tucker <dtucker@zip.com.au>
  - (stevesk) bsd-cygwin_util.[ch] BSD license from Corinna Vinschen
+ - (tim) [configure.ac] add tests for recvmsg and sendmsg.
+   [monitor_fdpass.c] add checks for HAVE_SENDMSG and HAVE_RECVMSG for
+   systems that HAVE_ACCRIGHTS_IN_MSGHDR but no recvmsg or sendmsg.
 
 20020414
  - (djm) ssh-rand-helper improvements
