--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020417
+ - (djm) Tell users to configure /dev/random support into OpenSSL in INSTALL
+
 20020415
  - (djm) Unbreak "make install". Fix from Darren Tucker <dtucker@zip.com.au>
  - (stevesk) bsd-cygwin_util.[ch] BSD license from Corinna Vinschen
