- (djm) Fix .Nm in mdoc2man.pl from pspencer@fields.utoronto.ca

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20020417
  - (djm) Tell users to configure /dev/random support into OpenSSL in INSTALL
+ - (djm) Fix .Nm in mdoc2man.pl from pspencer@fields.utoronto.ca
 
 20020415
  - (djm) Unbreak "make install". Fix from Darren Tucker <dtucker@zip.com.au>
