--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20020417
  - (djm) Tell users to configure /dev/random support into OpenSSL in INSTALL
  - (djm) Fix .Nm in mdoc2man.pl from pspencer@fields.utoronto.ca
+ - (tim) [configure.ac] Issue warning on --with-default-path=/some_path
+   if LOGIN_CAP is enabled. Report & testing by Tuc <tuc@ttsg.com>
 
 20020415
  - (djm) Unbreak "make install". Fix from Darren Tucker <dtucker@zip.com.au>
