--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020423
+ - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
+   Robert Urban <urban@spielwiese.de>
+
 20020421
  - (tim) [entropy.c.] Portability fix for SCO Unix 3.2v4.x (SCO OSR 3.0).
    entropy.c needs seteuid(getuid()) for the setuid(original_uid) to succeed.
