--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
  - (djm) Trim ChangeLog to include only post-3.1 changes
  - (djm) Update RPM spec file versions
  - (djm) Redhat spec enables KrbV by default
+ - (djm) Applied OpenSC smartcard updates from Markus & 
+   Antti Tapaninen <aet@cc.hut.fi>
+ - (djm) Define BROKEN_REALPATH for AIX, patch from 
+   Antti Tapaninen <aet@cc.hut.fi>
  - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
    Robert Urban <urban@spielwiese.de>
  - (djm) Make privsep work with PAM (still experimental)
