--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    Antti Tapaninen <aet@cc.hut.fi>
  - (djm) Define BROKEN_REALPATH for AIX, patch from 
    Antti Tapaninen <aet@cc.hut.fi>
+ - (djm) Bug #213: Simplify CMSG_ALIGN macros to avoid symbol clashes. 
+   Reported by Doug Manton <dmanton@emea.att.com>
  - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
    Robert Urban <urban@spielwiese.de>
  - (djm) Make privsep work with PAM (still experimental)
