--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,9 @@
    Reported by Doug Manton <dmanton@emea.att.com>
  - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
    Robert Urban <urban@spielwiese.de>
+ - (djm) Bug #206 - blibpath isn't always needed for AIX ld, avoid 
+   sizeof(long long int) == 4 breakage. Patch from Matthew Clarke
+   <Matthew_Clarke@mindlink.bc.ca>
  - (djm) Make privsep work with PAM (still experimental)
  - (djm) OpenBSD CVS Sync
    - deraadt@cvs.openbsd.org 2002/04/20 09:02:03
