--- a/ChangeLog
+++ b/ChangeLog
@@ -128,8 +128,8 @@
  - (bal) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2002/04/06 00:30:08
      [sftp-client.c]
-     Fix occasional corruption on upload due to bad reuse of request id, spotted
-     by chombier@mac.com; ok markus@
+     Fix occasional corruption on upload due to bad reuse of request 
+     id, spotted by chombier@mac.com; ok markus@
    - mouring@cvs.openbsd.org 2002/04/06 18:24:09
      [scp.c]
      Fixes potental double // within path.
