--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 20020423
+ - (stevesk) [acconfig.h configure.ac session.c] LOGIN_NO_ENDOPT for HP-UX
  - (stevesk) [acconfig.h] NEED_IN_SYSTM_H unused
  - (markus) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2002/04/23 12:58:26
