--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020426
+ - (djm) Bug #137, #209: fix make problems for scard/Ssh.bin, do uudecode
+   during distprep only
+
 20020425
  - (stevesk) [defines.h] remove USE_TIMEVAL; unused
  - (stevesk) [acconfig.h auth-passwd.c configure.ac sshd.c] HP-UX 10.26
