--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20020426
  - (djm) Bug #137, #209: fix make problems for scard/Ssh.bin, do uudecode
    during distprep only
+ - (djm) Disable PAM password expiry until a complete fix for bug #188 exists
 
 20020425
  - (stevesk) [defines.h] remove USE_TIMEVAL; unused
