--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020501
+ - (djm) Import OpenBSD regression tests. Requires BSD make to run
+
 20020429
  - (tim) [contrib/caldera/openssh.spec] update fixUP to reflect changes in
    sshd_config.
