--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 20020506
+ - (djm) Unbreak auth-passwd.c for PAM and SIA
+
+20020506
  - (bal) Fixed auth-passwd.c to resolve PermitEmptyPassword issue
  
 20020501
