--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 20020506
  - (djm) Unbreak auth-passwd.c for PAM and SIA
+ - (djm) Unbreak PAM auth for protocol 1. Report from Pekka Savola 
+   <pekkas@netcore.fi>
 
 20020506
  - (bal) Fixed auth-passwd.c to resolve PermitEmptyPassword issue
