--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,9 @@
  - (djm) Unbreak auth-passwd.c for PAM and SIA
  - (djm) Unbreak PAM auth for protocol 1. Report from Pekka Savola 
    <pekkas@netcore.fi>
-
+ - (djm) Don't reinitialise PAM credentials before we have started PAM.
+   Report from Pekka Savola <pekkas@netcore.fi>
+   
 20020506
  - (bal) Fixed auth-passwd.c to resolve PermitEmptyPassword issue
  
