--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 20020507
+ - (tim) [openbsd-compat/bsd-arc4random.c] fix logic on when seed_rng() is
+   called. Report by Chris Maxwell <maxwell@cs.dal.ca>
+
+20020507
  - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
    Add truncate() emulation to address Bug 208
 
