--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20020507
  - (tim) [openbsd-compat/bsd-arc4random.c] fix logic on when seed_rng() is
    called. Report by Chris Maxwell <maxwell@cs.dal.ca>
+ - (tim) [Makefile.in configure.ac] set SHELL variable in Makefile
 
 20020507
  - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
