--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020508
+ - (djm) Disable PAM kbd-int auth if privsep is turned on (it doesn't work)
+
 20020507
  - (tim) [openbsd-compat/bsd-arc4random.c] fix logic on when seed_rng() is
    called. Report by Chris Maxwell <maxwell@cs.dal.ca>
