--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-20020508
- - (djm) Disable PAM kbd-int auth if privsep is turned on (it doesn't work)
+20020509
+ - (tim) [Makefile.in] Unbreak make -f Makefile.in distprep
 
-20020507
+20020508
  - (tim) [openbsd-compat/bsd-arc4random.c] fix logic on when seed_rng() is
    called. Report by Chris Maxwell <maxwell@cs.dal.ca>
  - (tim) [Makefile.in configure.ac] set SHELL variable in Makefile
+ - (djm) Disable PAM kbd-int auth if privsep is turned on (it doesn't work)
 
 20020507
  - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
