--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20020510
+ - (djm) Rework RedHat RPM files. Based on spec from Nalin 
+   Dahyabhai <nalin@redhat.com> and patches from 
+   Pekka Savola <pekkas@netcore.fi>
+
 20020509
  - (tim) [Makefile.in] Unbreak make -f Makefile.in distprep
 
