--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    Pekka Savola <pekkas@netcore.fi>
  - (djm) Try to drop supplemental groups at daemon startup. Patch from 
    RedHat
+ - (bal) Back all the way out of auth-passwd.c changes.  Breaks too many
+   things that don't set pw->pw_passwd.
 
 20020509
  - (tim) [Makefile.in] Unbreak make -f Makefile.in distprep
