--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020513
+ - (djm) Add --with-superuser-path=xxx configure option to specify what $PATH
+   the superuser receives.
+
 20020511
  - (tim) [configure.ac] applied a rework of djm's OpenSSL search cleanup patch.
    Now only searches system and /usr/local/ssl (OpenSSL's default install path)
