--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 20020513
+ - (stevesk) add initial README.privsep
  - (stevesk) [configure.ac] nicer message: --with-privsep-user=user
  - (djm) Add --with-superuser-path=xxx configure option to specify what $PATH
    the superuser receives.
