- (djm) Bug #234: missing readpassphrase declaration and defines

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
  - (djm) Add --with-privsep-path configure option
  - (djm) Update RPM spec file: different superuser path, use
    /var/empty/sshd for privsep
+ - (djm) Bug #234: missing readpassphrase declaration and defines
 
 20020511
  - (tim) [configure.ac] applied a rework of djm's OpenSSL search cleanup patch.
