--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
  - (djm) Update RPM spec file: different superuser path, use
    /var/empty/sshd for privsep
  - (djm) Bug #234: missing readpassphrase declaration and defines
+ - (djm) Add INSTALL warning about SSH protocol 1 blowfish w/ OpenSSL < 0.9.6
 
 20020511
  - (tim) [configure.ac] applied a rework of djm's OpenSSL search cleanup patch.
