--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 20020514
  - (stevesk) [README.privsep] PAM+privsep works with Solaris 8.
+ - (tim) [sshpty.c] set tty modes when allocating old style bsd ptys to
+   match what newer style ptys have when allocated. Based on a patch by
+   Roger Cornelius <rac@tenzing.org>
+   [README.privsep] UnixWare 7 and OpenUNIX 8 work.
 
 20020513
  - (stevesk) add initial README.privsep
