--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
  - (tim) [README.privsep] UnixWare 7 and OpenUNIX 8 work.
  - (tim) [README.privsep] remove reference to UnixWare 7 and OpenUNIX 8
    from PAM-enabled pragraph. UnixWare has no PAM.
+ - (tim) [contrib/caldera/openssh.spec] update version.
 
 20020513
  - (stevesk) add initial README.privsep
