--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@
      'monitor' variable clashes with at least one lame platform (NeXT).  i
      Renamed to 'pmonitor'.  provos@
  - (bal) Fixed up PAM case.  I think.
+ - (bal) Clarified openbsd-compat/*-cray.* Licence provided by Wendy
 
 20020514
  - (stevesk) [README.privsep] PAM+privsep works with Solaris 8.
