--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020521
+ - (stevesk) [sshd.c] bug 245; disable setsid() for now
+
 20020517
  - (tim) [configure.ac] remove extra MD5_MSG="no" line.
 
