--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
    Fix typo/thinko.  Pass in as to auth_approval(), not NULL.
    Closes PR 2659.
  - Crank version
+ - Crank RPM spec versions
 
 20020521
  - (stevesk) [sshd.c] bug 245; disable setsid() for now
