--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20020522
  - (djm) Fix spelling mistakes, spotted by Solar Designer i
    <solar@openwall.com>
+ - Sync scard/ (not sure when it drifted)
  - (djm) OpenBSD CVS Sync:
    [auth.c]
    Fix typo/thinko.  Pass in as to auth_approval(), not NULL.
