--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,8 @@
      [uidswap.c]
      format spec change/casts and some KNF; ok markus@
 
+ - (bal) Corrected debug() in uidswap.c to match upstream.
+
 20020604
  - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
    setsockopt from debug to error for now).
