--- a/ChangeLog
+++ b/ChangeLog
@@ -130,6 +130,7 @@
    - markus@cvs.openbsd.org 2002/06/06 17:30:11
      [sftp-server.c]
      use get_int() macro (hide iqueue)
+ - (bal) Missed msg.[ch] in merge.  Required for ssh-keysign.
 
 20020604
  - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
