--- a/ChangeLog
+++ b/ChangeLog
@@ -132,6 +132,7 @@
      use get_int() macro (hide iqueue)
  - (bal) Missed msg.[ch] in merge.  Required for ssh-keysign.
  - (bal) Forgot to add msg.c Makefile.in.
+ - (bal) monitor_mm.c typos.
 
 20020604
  - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
