--- a/ChangeLog
+++ b/ChangeLog
@@ -133,6 +133,8 @@
  - (bal) Missed msg.[ch] in merge.  Required for ssh-keysign.
  - (bal) Forgot to add msg.c Makefile.in.
  - (bal) monitor_mm.c typos.
+ - (bal) Refixed auth2.c.  It was never fully commited while spliting out
+	authentication to different files.
 
 20020604
  - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
