--- a/ChangeLog
+++ b/ChangeLog
@@ -135,6 +135,8 @@
  - (bal) monitor_mm.c typos.
  - (bal) Refixed auth2.c.  It was never fully commited while spliting out
 	authentication to different files.
+ - (bal) ssh-keysign should build and install correctly now.  Phase two
+   would be to clean out any dead wood and disable ssh setuid on install.
 
 20020604
  - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
