--- a/ChangeLog
+++ b/ChangeLog
@@ -134,9 +134,10 @@
  - (bal) Forgot to add msg.c Makefile.in.
  - (bal) monitor_mm.c typos.
  - (bal) Refixed auth2.c.  It was never fully commited while spliting out
-	authentication to different files.
+   authentication to different files.
  - (bal) ssh-keysign should build and install correctly now.  Phase two
    would be to clean out any dead wood and disable ssh setuid on install.
+ - (bal) Reverse logic, use __func__ first since it's C99
 
 20020604
  - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
