--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 20020607
  - (bal) Missed __progname in ssh-keysign.c  patch by dtucker@zip.com.au
+ - (bal) use 'LOGIN_PROGRAM'  not '/usr/bin/login' in session.c patch by
+   Bertrand.Velle@apogee-com.fr
 
 20020606
  - (bal) OpenBSD CVS Sync
