--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 20020607
+ - (bal) Removed --{enable/disable}-suid-ssh
  - (bal) Missed __progname in ssh-keysign.c  patch by dtucker@zip.com.au
  - (bal) use 'LOGIN_PROGRAM'  not '/usr/bin/login' in session.c patch by
    Bertrand.Velle@apogee-com.fr
