--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020611
+ - (bal) ssh-agent.c RCSD fix (|unexpand already done)
+
 20020609
  - (bal) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2002/06/08 05:07:56
