--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,8 @@
    - itojun@cvs.openbsd.org 2002/06/11 08:11:45
      [canohost.c]
      use "ntop" only after initialized
+ - (bal) Cygwin fix up from swap uid clean up in ssh.c patch by
+   vinschen@redhat.com
 
 20020609
  - (bal) OpenBSD CVS Sync
