--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,8 @@
    - deraadt@cvs.openbsd.org 2002/06/17 06:05:56
      [scp.c]
      make usage like man page
+ - (bal) Cygwin special handling of empty passwords wrong.  Patch by
+   vinschen@redhat.com
 
 20020613
  - (bal) typo of setgroup for cygwin.  Patch by vinschen@redhat.com
