--- a/ChangeLog
+++ b/ChangeLog
@@ -56,6 +56,7 @@
      missed Per Allansson (auth2-chall.c)
  - (bal) Cygwin special handling of empty passwords wrong.  Patch by
    vinschen@redhat.com
+ - (bal) Missed integrating ssh_config.5 and sshd_config.5
 
 20020613
  - (bal) typo of setgroup for cygwin.  Patch by vinschen@redhat.com
