--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
      [monitor.c]
      Don't initialise compression buffers when compression=no in sshd_config;
      ok Niels@
-
+  - ID sync for auth-passwd.c
 
 20020620
  - (bal) Fixed AIX environment handling, use setpcred() instead of existing
