--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
      Don't initialise compression buffers when compression=no in sshd_config;
      ok Niels@
   - ID sync for auth-passwd.c
+ - (djm) Warn and disable compression on platforms which can't handle both
+   useprivilegeseparation=yes and compression=yes
 
 20020620
  - (bal) Fixed AIX environment handling, use setpcred() instead of existing
