- (djm) Update README.privsep; spotted by fries@

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020622
+ - (djm) Update README.privsep; spotted by fries@
+
 20020621
  - (djm) Sync:
    - djm@cvs.openbsd.org 2002/06/21 05:50:51
