--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020623
+ - (stevesk) [configure.ac] bug #255 LOGIN_NEEDS_UTMPX for AIX.
+
 20020622
  - (djm) Update README.privsep; spotted by fries@
  - (djm) Release 3.3p1
