--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20020623
  - (stevesk) [configure.ac] bug #255 LOGIN_NEEDS_UTMPX for AIX.
  - (bal) removed GNUism for getops in ssh-agent since glibc lacks optreset.
+ - (bal) add extern char *getopt.  Based on report by dtucker@zip.com.au 
 
 20020622
  - (djm) Update README.privsep; spotted by fries@
