20020626  - (bal) moved aix_usrinfo() and noted not setting real TTY.  Patch by    dtucker@zip.com.au

--- a/TODO
+++ b/TODO
@@ -96,7 +96,8 @@ PrivSep Issues:
 - PAM 
   + See above PAM notes
 - AIX
-  + Issues with usrinfo()
+  + usrinfo() does not set TTY, but only required for legicy systems.  Works
+    with PrivSep.
 - OSF
   + SIA is broken
 - Cygwin
