--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
  - (bal) if mmap() is substandard, don't allow compression on server side.
    Post 'event' we will add more options.
  - (tim) [contrib/caldera/openssh.spec] Sync with Caldera
+ - (bal) moved aix_usrinfo() and noted not setting real TTY.  Patch by
+   dtucker@zip.com.au
 
 20020624
  - OpenBSD CVS Sync
