- (djm) Update spec files for release

--- a/ChangeLog
+++ b/ChangeLog
@@ -58,6 +58,7 @@
  - (djm) Require krb5 devel for RPM build w/ KrbV 
  - (djm) Improve PAMAuthenticationViaKbdInt text from Nalin Dahyabhai 
    <nalin@redhat.com>
+ - (djm) Update spec files for release 
 
 20020625
  - (stevesk) [INSTALL acconfig.h configure.ac defines.h] remove --with-rsh
